--- a/app/index.html
+++ b/app/index.html
@@ -90,6 +90,8 @@
         <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
         <script src="scripts/services/lb-services.js"></script>
         <script src="scripts/controllers/edit-voucher.js"></script>
+        <script src="scripts/services/voucherstates.js"></script>
+        <script src="scripts/services/dummyservice.js"></script>
         <!-- endbuild -->
 </body>
 </html>
