--- a/app/index.html
+++ b/app/index.html
@@ -33,15 +33,15 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">Expense Vouchers</a>
+            <a class="navbar-brand" href="#/">vouchers</a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
               <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
+              <li><a ng-href="#">About</a></li>
+              <li><a ng-href="#">Contact</a></li>
             </ul>
           </div>
         </div>
@@ -54,14 +54,14 @@
 
     <div class="footer">
       <div class="container">
-        <p class="lead"><span class="glyphicon glyphicon-heart"></span> Powered by NodeJS, Mongo, Angular and loopback</p>
-        <p><span class="glyphicon glyphicon-user"></span> <small>Developed by Arun Kutty (kutty.a@gmail.com)</small></p>
+        <p class="lead"><span class="glyphicon glyphicon-heart"></span> Powered by NodeJS, MongoDB, Angular and Loopback</p>
+        <p><span class="glyphicon glyphicon-user"></span> <small>Developed by Arun N. Kutty (kutty.a@gmail.com)</small></p>
       </div>
     </div>
 
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-     <script>
+<!--     <script>
        !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
        (A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),
        r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)
@@ -69,7 +69,7 @@
 
        ga('create', 'UA-XXXXX-X');
        ga('send', 'pageview');
-    </script>
+    </script>-->
 
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
@@ -90,6 +90,8 @@
         <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
         <script src="scripts/services/lb-services.js"></script>
         <script src="scripts/controllers/edit-voucher.js"></script>
+      <script src="scripts/controllers/create-voucher.js"></script>
+        <script src="scripts/controllers/home.js"></script>
         <script src="scripts/services/voucherstates.js"></script>
         <script src="scripts/services/dummyservice.js"></script>
         <!-- endbuild -->
