--- a/app/index.html
+++ b/app/index.html
@@ -54,7 +54,7 @@
 
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> Powered by Node.JS, MongoDB, Angular.JS and Loopback.io</p>
+        <p><span class="glyphicon glyphicon glyphicon-copyright-mark"></span> Copyright 2016</p>
         <a href="http://arunkutty.com"><span class="glyphicon glyphicon-user"></span> Arun N. Kutty (arunkutty.com)</a>
       </div>
     </div>
@@ -93,9 +93,11 @@
       <script src="scripts/controllers/create-voucher.js"></script>
     <script src="scripts/controllers/employee-voucher.js"></script>
     <script src="scripts/controllers/manager-voucher.js"></script>
+    <script src="scripts/controllers/query-voucher.js"></script>
         <script src="scripts/controllers/home.js"></script>
         <script src="scripts/services/voucherstates.js"></script>
         <script src="scripts/services/dummyservice.js"></script>
+        <script src="scripts/services/dateprovider.js"></script>
         <!-- endbuild -->
 </body>
 </html>
