--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="bower_components/angular-print/angularPrint.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -82,6 +83,7 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="bower_components/angular-print/angularPrint.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -93,10 +95,10 @@
       <script src="scripts/controllers/create-voucher.js"></script>
     <script src="scripts/controllers/employee-voucher.js"></script>
     <script src="scripts/controllers/manager-voucher.js"></script>
-    <script src="scripts/controllers/query-voucher.js"></script>
+    <script src="scripts/controllers/manager-query-voucher.js"></script>
+    <script src="scripts/controllers/employee-query-voucher.js"></script>
         <script src="scripts/controllers/home.js"></script>
         <script src="scripts/services/voucherstates.js"></script>
-        <script src="scripts/services/dummyservice.js"></script>
         <script src="scripts/services/dateprovider.js"></script>
         <!-- endbuild -->
 </body>
