Some more flows, expense addition/edit made via modals instead of pop-over and ng-table-to-csv to export query results

--- a/app/index.html
+++ b/app/index.html
@@ -84,6 +84,7 @@
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="bower_components/angular-print/angularPrint.js"></script>
+    <script src="bower_components/ng-table-to-csv/dist/ng-table-to-csv.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -97,6 +98,8 @@
     <script src="scripts/controllers/manager-voucher.js"></script>
     <script src="scripts/controllers/manager-query-voucher.js"></script>
     <script src="scripts/controllers/employee-query-voucher.js"></script>
+    <script src="scripts/controllers/expense-modal.js"></script>
+
         <script src="scripts/controllers/home.js"></script>
         <script src="scripts/services/voucherstates.js"></script>
         <script src="scripts/services/dateprovider.js"></script>
