Changed copyright to Purandara

--- a/app/index.html
+++ b/app/index.html
@@ -56,7 +56,7 @@
     <div class="footer">
       <div class="container">
         <p><span class="glyphicon glyphicon glyphicon-copyright-mark"></span> Copyright 2016</p>
-        <a href="http://arunkutty.com"><span class="glyphicon glyphicon-user"></span> Arun N. Kutty (arunkutty.com)</a>
+        <a href="http://purandara.com"><span class="glyphicon glyphicon-user"></span> Purandara Sales Agencies (purandara.com)</a>
       </div>
     </div>
 
