--- a/app/index.html
+++ b/app/index.html
@@ -101,6 +101,9 @@
     <script src="scripts/controllers/expense-modal.js"></script>
     <script src="scripts/controllers/confirm-dialog.js"></script>
     <script src="scripts/controllers/info-dialog.js"></script>
+    <script src="scripts/controllers/view-organisation.js"></script>
+    <script src="scripts/controllers/edit-organisation.js"></script>
+
 
 
         <script src="scripts/controllers/home.js"></script>
