First set of e2e functionality for ourtime feature

--- a/app/index.html
+++ b/app/index.html
@@ -104,6 +104,13 @@
     <script src="scripts/controllers/view-organisation.js"></script>
     <script src="scripts/controllers/edit-organisation.js"></script>
     <script src="scripts/controllers/manage-employees.js"></script>
+    <script src="scripts/controllers/dpor-home.js"></script>
+    <script src="scripts/controllers/jobdetail-modal.js"></script>
+    <script src="scripts/controllers/create-dpor.js"></script>
+    <script src="scripts/controllers/employee-dpor.js"></script>
+    <script src="scripts/controllers/employee-query-dpor.js"></script>
+    <script src="scripts/controllers/manager-dpor.js"></script>
+    <script src="scripts/controllers/manager-query-dpor.js"></script>
 
 
 
